# Swiss

./: .gitignore  README.md  build.bat  build.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: format.yaml  jobs.ruff.container  lint.yaml  ruff.yaml
src/swiss/: __init__.py  __main__.py
src/swiss/cli/: __init__.py  _cli.py
src/swiss/command/: __init__.py  _base.py  _clone.py  _docker.py  _format.py  _hash.py  _import.py  _install_editable.py  _lint.py  _project.py  _remove.py  _space_find.py  _swing.py  _version.py
src/swiss/exceptions/: __init__.py  _command_not_found.py  _invalid_input.py  _not_in_venv.py
src/swiss/util/: __init__.py  _find_command.py  _git_branch.py  _in_venv.py
